# GeometryCalculator

./: CMakeLists.txt  README.md  main.cpp  shapeInterface.hpp
shapes/: Circle.hpp  Rectangle.hpp  Triangle.hpp
tests/: test_UnitTests.cpp
